--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "predev": "npm run build:prisma",
+  "dev": "tsx watch src/server.ts",
+  "build": "tsc",
+  "build:prisma": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +30,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
     "cors": "^2.8.5",
+    "pg": "^8.16.3",
+    "prisma": "^6.15.0",
     "uuid": "^13.0.0"
   }
 }
