--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "predev": "npm run build:prisma",
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/server.ts | pino-pretty",
     "build": "tsc",
     "build:prisma": "npx prisma generate"
   },
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0",
+    "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
