--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^6.15.0",
     "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
+    "ioredis": "^5.7.0",
     "pg": "^8.16.3",
     "pino": "^9.9.5",
     "prisma": "^6.15.0",
