--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: postgres:15
     restart: always
     environment:
-      - POSTGRES_DB=signal-watcher-api-db-1
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=1234
+      - POSTGRES_DB=
+      - POSTGRES_USER=
+      - POSTGRES_PASSWORD=
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
