fix: scripts for deploy

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "predev": "npm run build:prisma",
     "dev": "tsx watch src/server.ts | pino-pretty",
     "build": "tsc",
-     "start": "node dist/server.js",
-    "build:prisma": "npx prisma generate"
+    "start": "node dist/server.js",
+    "build:prisma": "npx prisma generate",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "postinstall": "npm run migrate:deploy"
   },
   "keywords": [],
   "author": "",
